Fixing scrollbar pad

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -483,7 +483,12 @@ body {
     }
   }
 
+  .mCSB_scrollTools.mCSB_scrollTools_vertical {
+    bottom: 16px;
+  }
+
   .mCSB_scrollTools.mCSB_scrollTools_horizontal {
+    right: 16px;
     .mCSB_draggerContainer {
       margin: 0 15px;
       .mCSB_dragger {
